增加  log4j  功能！  启用日志！